--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "personal_portfolio",
   "version": "1.0.0",
-  "description": "Responsive portfolio website",
+  "description": "Responsive Portfolio Website",
   "main": "index.js",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "Aaron Ooi",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "node-sass": "^4.9.2"
+  }
 }
